# lang-lens

./: .deepsource.toml  README.md  pyproject.toml
data/: lang_codes.csv  wili_subset_khan.csv
data/wili-2018/: README.txt  labels.csv  urls.txt  y_test.txt  y_train.txt
experiments/: data_exploration.ipynb  preprocessing.ipynb  vocab_size.ipynb
langlens/: data.py  evaluation.py  main.py
langlens/baseline/: classifier.py  model_comparison.py  preprocess.py  vectorize.py
langlens/configuration/: config.py  logging.ini
report/: abstract.tex  appendix.tex  config.tex  datasets.tex  discussion.tex  hyperparameter.tex  intro.tex  main.tex  problem.tex  references.bib  results.tex
