[tool.poetry]
name = "langlens"
version = "0.1.0"
description = ""
authors = ["Yannik Queisler <dev.yannik.queisler@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
scikit-learn = "^1.6.1"
numpy = "^2.2.3"
nltk = "^3.9.1"
matplotlib = "^3.10.0"
seaborn = "^0.13.2"
click = "^8.1.8"
pyyaml = "^6.0.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
notebook = "^7.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
langlens = "langlens.main:cli"
